<resources>
    <string name="app_name">RyokoDoko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_schedule">내 일정</string>
    <string name="travel_checklist">여행 체크리스트</string>
    <string name="schedule_share">일정 공유 게시판</string>
    <string name="data_backup">데이터 백업하기</string>
    <string name="app_evaluation">평점 및 리뷰 남기기</string>
    <string name="setting">설정</string>

    <string name="travel_city">여행 도시</string>
    <string name="travel_days">몇일 간의 여행</string>
    <string name="travel_period">여행 기간</string>

    <string name="hokkaido_area">홋카이도 지방(삿포로, 오타루, 하코다테, 비에이 등)</string>
    <string name="kantou_area">간토 지방(도쿄, 요코하마, 하코네, 시즈오카 등)</string>
    <string name="kansai_area">간사이 지방(오사카, 교토, 나라, 고베, 히메지 등)</string>
    <string name="kyushu_area">규슈 지방(후쿠오카, 오이타, 가고시마, 나가사키 등)</string>
    <string name="hokkaido">홋카이도</string>
    <string name="kantou">간토</string>
    <string name="kansai">간사이</string>
    <string name="kyushu">규슈</string>

    <string name="choose_city">여행할 지역를 선택하세요.</string>
    <string name="city_result">여행 지역~</string>
    <string name="choose_date">날짜를 선택하세요.</string>
    <string name="choose_start_end_date">여행 시작과 종료일을 선택하세요.</string>
    <string name="start_date">가는 날</string>
    <string name="end_date">오는 날</string>
    <string name="days_result">여행 기간~</string>
    <string name="when_the_date_selection_is_complete">도시와 날짜 선택이 완료되면 우측 +버튼을 클릭하세요.</string>

    <string name="schedule">일정</string>
    <string name="choose_days_button">일자 별 버튼을 클릭하여 세부 일정을 계획하세요.</string>

    <string name="day">DAY</string>
    <string name="starting_point">출발지</string>
    <string name="destination">도착지</string>
    <string name="insert">일정 추가</string>
    <string name="if_you_selected_point">출발지와 도착지 설정 후 확인 버튼을 누르세요.</string>
    <string name="title_activity_choose_point_in_map">ChoosePointInMapActivity</string>

    <string name="checklist">체크리스트</string>
    <string name="checklist_guide">여행 전에 꼭 준비해야 할 것들을 미리 메모하세요!</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="notice_delete_all">체크리스트를 전부 삭제하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="add_checklist_notice">필요한 메모를 추가하세요!</string>
</resources>
