<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ryokodoko_with_sun_with_text_app_launcher" />
    <!-- 작은 료코도코 아이콘 -->

    <TextView
        android:id="@+id/tVCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/travel_city"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <!-- 여행 도시 명-->
    <TextView
        android:id="@+id/tVDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_days"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <!-- 여행 기간 (O일) -->

    <TextView
        android:id="@+id/tVPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_period" />
    <!-- 여행 기간(00년 00월 00일 ~ 00년 00월 00일)-->

</LinearLayout>
